--- a/RandomEventsLab8/RandomEventsLab8.csproj
+++ b/RandomEventsLab8/RandomEventsLab8.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{748580DA-C45F-4C72-A454-3691C9FCE3C6}</ProjectGuid>
+    <ProjectGuid>{EFBFF2F0-FEB2-49ED-A0CB-73310D56C7B2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Random8</RootNamespace>
-    <AssemblyName>Random8</AssemblyName>
+    <RootNamespace>RandomEventsLab8</RootNamespace>
+    <AssemblyName>RandomEventsLab8</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
